--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Chatt App</h1>
+    <form id="message-form">
+        <input name="message" placeholder="Message" type="text">
+        <button>Send</button>
+    </form>
+    <button id="send-location" >Send Location</button>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/chat.js"></script>
 </body>
